import "define_pro.proto";

message MsgRobotConfig
{
  optional string       server_host     = 1;
  optional string       username        = 2;
  optional string       password        = 3;
  optional fixed32      version         = 4;
  optional TAuthType    auth_type       = 5;
}

